Update for UI and advanced options button
